module/igw.tf
// Creates IGW
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"

  tags = "${merge(var.tags, map("Name","gw"))}" 
}
